# Rust_Python_ML_PE

./: .gitignore  .gitmodules  Jenkinsfile  Jenkinsfile.modified  benchmark.py  rust-analyzer.toml
artifacts/pytorch_mnist_pt/: metrics.json
frontend/mnist_app/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/mnist_app/src/: App.jsx  index.css
frontend/mnist_app/src/components/: InferencePage.jsx  Landing.jsx
latex_reports/: combined_research_paper.tex  draft_1.tex  draft_2.tex  lstm.tex  main.tex  merge_script.py  mnist.tex  regression.tex  text_classification_news.tex
python_ml/: requirements.in  requirements.txt
python_ml/benchmark/: bench_lstm.py  bench_mnist.py  bench_regression.py  bench_text_class.py  rust_benchmark.py
python_ml/benchmark_Python/: bench_lstm.py  bench_mnist.py  bench_regression.py  bench_text_class.py
python_ml/benchmark_Python/PythonLocustResult/LSTM/: lstm_locust_py.html
python_ml/benchmark_Python/PythonLocustResult/Regression/: regression_locust_py.html
python_ml/benchmark_Python/PythonLocustResult/TCN/: tcn_locust_py.html
python_ml/pytorch/LSTM/: .gitignore  config.py  dataset.py  model.py  requirements.txt
python_ml/pytorch/LSTM/Inference/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Jenkinsfile  app.py  mount_libs.sh  run_container.sh
python_ml/pytorch/LSTM/Training/: training.py
python_ml/pytorch/lstm_train_inference/: Dockerfile  inference.py  requirements-inference.txt  training.py
python_ml/pytorch/mnist/: main.py  model.ipynb  model.py  training.ipynb  training.py
python_ml/pytorch/mnist/Inference/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Jenkinsfile  Readme.md  app.py  model.py  mount_libs.sh  requirements.txt  run_container.sh
python_ml/pytorch/regression/: training.py
python_ml/pytorch/text_classification/: inference.py  model.py  requirements.txt  run_train.py  training.py
python_ml/pytorch/text_classification_news/: Dockerfile  Dockerfile.cpu  app.py  mount_libs.sh  requirements.docker.txt  requirements.txt  run_inference.sh  training.py
python_ml/pytorch/text_generation/: __init__.py  app.py  data.py  main.py  model.py  predict.py  training.py  verify_model.py
python_ml/tensorflow/mnist/: data.py  main.py  model.py  training.py
python_ml/tensorflow/text_classification/: inference.py  model.py  requirements.txt  run_train.py  training.py
python_ml/tensorflow/text_generation/: __init__.py  main.py  model.py  predict.py  training.py
reports/rust/: lstm.html  mnist.html  regression.html  text_class.html
rust_ml/: .dockerignore  Cargo.toml  Dockerfile.lstm_inf  Dockerfile.mnist_inf  Dockerfile.mnist_wgpu  Dockerfile.regression_inf  Dockerfile.text_class_inf  Dockerfile.wgpu_text_inf  bacon.toml  rust-toolchain.toml  rustfmt.toml
rust_ml/lstm_inference/: Cargo.toml
rust_ml/lstm_inference/src/: inference.rs  main.rs  model.rs  state.rs
rust_ml/lstm_train/: Cargo.toml
rust_ml/lstm_train/src/: dataset.rs  inference.rs  main.rs  training.rs
rust_ml/mnist_infer/: .dockerignore  Cargo.toml  Dockerfile  check_output.txt  check_output_2.txt  measure_cold_start.sh
rust_ml/mnist_infer/src/: inference.rs  main.rs  model.rs  state.rs
rust_ml/mnist_ml/: Cargo.toml
rust_ml/mnist_ml/src/: data.rs  main.rs  model.rs  training.rs
rust_ml/regression/: Cargo.toml
rust_ml/regression/src/: dataset.rs  inference.rs  main.rs  model.rs  training.rs
rust_ml/regression_inference/: Cargo.toml
rust_ml/regression_inference/src/: inference.rs  main.rs  model.rs  state.rs
rust_ml/text_classification_infer/: Cargo.toml
rust_ml/text_classification_infer/src/: inference.rs  main.rs  model.rs  training.rs
rust_ml/text_classification_infer/src/data/: batcher.rs  mod.rs  tokenizer.rs
rust_ml/text_classification_news/: Cargo.toml
rust_ml/text_classification_news/src/: inference.rs  lib.rs  main.rs  model.rs  training.rs
rust_ml/text_classification_news/src/data/: batcher.rs  dataset.rs
rust_ml/text_gen_train/: Cargo.toml
rust_ml/text_gen_train/src/: main.rs  model.rs  training.rs
rust_ml/text_gen_train/src/data/: batcher.rs  dataset.rs  tokenizer.rs
(+43 files in other folders)
