[workspace]
resolver = "3"
members = ["lstm_inference","lstm_train","mnist_infer","mnist_ml", "regression", "regression_inference", "text_classification_infer", "text_classification_news", "text_gen_train"]

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.metadata.bacon]
analyzer = "standard"

[workspace.dependencies]

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
