[package]
name = "mnist_infer"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "~0.19", features = [
    "std",
    "ndarray",
    "store",
], default-features = false }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.25"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true
