[package]
name = "text_classification_infer"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "~0.20", features = [
    "train",
    "tui",
    "sqlite-bundled",
    "metrics",
    "ndarray",
    "autotune",
    "fusion",
    "std",
    "wgpu",
], default-features = false }
log = { version = "0.4" }
derive-new = "0.5"
tokenizers = { version = "0.22.2", features = ["onig", "http"] }
serde = { version = "1.0.228", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
[lints]
workspace = true
