[package]
name = "text_classification_news"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "~0.20", features = [
    "train",
    "tui",
    "sqlite-bundled",
    "metrics",
    "ndarray",
    "autotune",
    "fusion",
    "std",
    "wgpu",
], default-features = false }
log = { version = "0.4" }
derive-new = "0.5"
tokenizers = { version = "0.22.2", features = ["onig", "http"] }
serde = { version = "1.0.228" }
[lints]
workspace = true
